# pyspark-overview

./: README.md  docker-compose.yml  pyproject.toml
code/: code.ipynb  documentation.ipynb
code/.ipynb_checkpoints/: code-checkpoint.ipynb  documentation-checkpoint.ipynb
code/spark-warehouse/table_temp_customers/: .part-00000-8da78728-4258-420c-8f16-d9ff1c99f392-c000.snappy.parquet.crc  .part-00001-8da78728-4258-420c-8f16-d9ff1c99f392-c000.snappy.parquet.crc  .part-00002-8da78728-4258-420c-8f16-d9ff1c99f392-c000.snappy.parquet.crc  part-00000-8da78728-4258-420c-8f16-d9ff1c99f392-c000.snappy.parquet  part-00001-8da78728-4258-420c-8f16-d9ff1c99f392-c000.snappy.parquet  part-00002-8da78728-4258-420c-8f16-d9ff1c99f392-c000.snappy.parquet
dataset/parquet_data/test.parquet/: .part-00000-1d4b7fb8-2142-45d1-817b-2a384b20bce7-c000.snappy.parquet.crc  part-00000-1d4b7fb8-2142-45d1-817b-2a384b20bce7-c000.snappy.parquet
output/parquet_data/test.parquet/: .part-00000-00a0157b-6904-475e-a319-1c0bb7f411b3-c000.snappy.parquet.crc  part-00000-00a0157b-6904-475e-a319-1c0bb7f411b3-c000.snappy.parquet
