[tool.poetry]
name = "pyspark-overview"
version = "0.1.0"
description = ""
authors = ["Gabriel Bossardi <contato@gabrielbossardi.com.br>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pyspark_overview"}]

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.4.0"
notebook = "^6.5.4"
pandas = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
